# lm-compiler-rust

./: .gitignore  Cargo.toml  README.md  TODO.txt  build.rs  run.ps1  run.sh
.github/workflows/: ci.yaml  releases.yaml
examples/: and.lm  arithmetic.lm  assignements.lm  comment.lm  convDate.lm  full_test.lm  hello_world.lm  if.lm  init.lm  isZero.lm  negative.lm  not.lm  or.lm  read.lm  strings.lm  while.lm  write.lm
inputs/: test.txt
src/: context.rs  grammar.rs  grammar.rustemo  grammar_actions.rs  grammar_lexer.rs  lex.l  lex.rs  lib.rs  main.rs
src/compiler/: ast.rs  context.rs  error.rs  mod.rs
src/compiler/asm/: mod.rs  tasm.rs
src/grammar/: mod.rs  rules.rs  rules.rustemo  rules_actions.rs  rules_builder.rs  rules_lexer.rs  types.rs
src/lexer/: lex.l  lex.rs  mod.rs
src/tests/: run.rs
