[package]
name = "lm-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
rflex = "0.9.0"
rustemo = "0.7.1"
thiserror = "2.0.16"

[build-dependencies]
failure = "0.1.8"
rflex = "0.9.0"
rustemo-compiler = "0.7.1"

[dev-dependencies]
datatest-stable = "0.3.2"

[[test]]
name = "integration-test"
path = "src/tests/run.rs"
harness = false
